--- a/mi_app/templates/mi_app/base.html
+++ b/mi_app/templates/mi_app/base.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Mi Proyecto{% endblock %}</title>
+    <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}">
 </head>
 <body>
     <header>
